--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -47,11 +47,10 @@
     position: absolute;
     top: 0;
     left: 0;
+    min-height: 100%;
     min-height: calc(100% - 48px);
     width: $column * 11;
     padding: 0 $column;
-    -webkit-transform: translateZ(0);
-    backface-visibility: hidden;
 
     &.fixed-bottom {
       position: fixed;
@@ -62,6 +61,10 @@
       position: fixed;
       top: 0;
       bottom: auto;
+    }
+    &.fixed {
+      position: fixed;
+      top: 0;
     }
   }
   .logged-in .main-sidebar.fixed-top {
